--- a/index.html
+++ b/index.html
@@ -5,18 +5,41 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="style.css" />
+        <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     </head>
     <body>
         <header class="header">
             <a href="#" class="logo">
                 Portefolio
             </a>
+
+            <i class='bx bx-menu' id="menu-icon"></i>
+
             <nav class="navbar">
-                <a href="#home">Home</a>
+                <a href="#home" class="active">Home</a>
                 <a href="#about">About</a>
                 <a href="#projects">Projects</a>
                 <a href="#contact">Contact</a>
             </nav>
         </header>
+
+    <section class="home" id="home">
+        <div class="home-content">
+            <h3>Hello I'm </h3>
+            <h1>Dan</h1>
+            <h3>I'm a <span>embedded software developper</span></h3>
+            <p>Lorem, ipsum dolor</p>
+
+            <div class="social-media">
+                <a href="https://www.facebook.com/daniil.stepanov.311"><i class='bx bxl-facebook'></i></a>
+                <a href="https://www.instagram.com/dan13615_/"><i class='bx bxl-instagram-alt'></i></a>
+                <a href="https://www.linkedin.com/in/daniil-stepanov-89a98715a"><i class='bx bxl-linkedin'></i></a>
+            </div>
+        </div>
+
+        <div class="home-img">
+            <img src="src/lettre-d.png" alt="">
+        </div>
+    </section>
     </body>
 </html>
