--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
     </head>
     <body>
         <header class="header">
-            <a href="#" class="logo">
-                Portefolio
-            </a>
+            <a href="#" class="logo">Portefolio</a>
 
             <i class='bx bx-menu' id="menu-icon"></i>
 
@@ -35,6 +33,8 @@
                 <a href="https://www.instagram.com/dan13615_/"><i class='bx bxl-instagram-alt'></i></a>
                 <a href="https://www.linkedin.com/in/daniil-stepanov-89a98715a"><i class='bx bxl-linkedin'></i></a>
             </div>
+
+            <a href="#" class="btn">Download CV</a>
         </div>
 
         <div class="home-img">
