--- a/index.html
+++ b/index.html
@@ -35,11 +35,82 @@
                 <a href="https://www.instagram.com/dan13615_/"><i class='bx bxl-instagram-alt'></i></a>
                 <a href="https://www.linkedin.com/in/daniil-stepanov-89a98715a"><i class='bx bxl-linkedin'></i></a>
             </div>
+            <a href="#" class="btn">Download CV</a>
         </div>
 
         <div class="home-img">
             <img src="src/lettre-d.png" alt="">
         </div>
+    </section>
+
+    <section class="about" id="about">
+        <div class="about-img">
+            <img src="src/lettre-d.png" alt="">
+        </div>
+
+        <div class="about-content">
+            <h2 class="heading">About <span>Me</span></h2>
+            <h3>Embedded Software Developper</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+                reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                Excepteur sint occaecat cupidatat non proident,
+                sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+            <a href="#" class="btn">Read More</a>
+        </div>
+    </section>
+
+    <section class="projects" id="projects">
+        <h2 class="heading">My <span>Projects</span></h2>
+
+        <div class="projects-container">
+            <div class="projects-box">
+                <i class="bx bx-code-alt"></i>
+                <h3>Algorithm</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                </p>
+                <a href="#" class="btn">Read More</a>
+            </div>
+
+            <div class="projects-box">
+                <i class='bx bxl-unity'></i>
+                <h3>Video Games</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                </p>
+                <a href="#" class="btn">Read More</a>
+            </div>
+
+            <div class="projects-box">
+                <i class='bx bxs-devices' ></i>
+                <h3>IoT</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                </p>
+                <a href="#" class="btn">Read More</a>
+            </div>
+        </div>
+    </section>
+
+    <section class="contact" id="contact">
+        <h2 class="heading">Contact <span>Me !</span></h2>
+
+        <form action="#">
+            <div class="input-box">
+                <input type="text" placeholder="Full Name">
+                <input type="email" placeholder="Email Adress">
+            </div>
+            <div class="input-box">
+                <input type="number" placeholder="Mobile Number">
+                <input type="text" placeholder="Email Subject">
+            </div>
+            <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+            <input type="submit" value="Send Message" class="btn">
+        </form>
     </section>
     </body>
 </html>
